@@ -1,8 +1,7 @@
 ## plugins to build by type
 ## $Id$
-plugins.type.general = autoLogin,captcha,cron,firePHP,googleAnalytics,imageHandler2,masterPassword,minify,pageCache,pageStats,recaptcha,settings,themeSwitcher,unitTests,useo2,useo3,ssu,phpBB3,formHandler,vBulletin,wordpress,blockHandler,haml,twig,googleStoreLocator,openID,prettyLinks,subscriptions,redirector,hoverbox3,multiQuantity,musicProductInfo,fualSlimbox,whoIsOnline,googleAdSense,flyoutCategories,jscrollerSideboxes,productGroupPricing,quickEdit,productTags
+plugins.type.general = autoLogin,captcha,cron,firePHP,googleAnalytics,imageHandler2,masterPassword,minify,pageCache,pageStats,recaptcha,settings,themeSwitcher,unitTests,useo2,useo3,ssu,phpBB3,formHandler,vBulletin,wordpress,blockHandler,haml,twig,googleStoreLocator,openID,prettyLinks,subscriptions,redirector,hoverbox3,multiQuantity,musicProductInfo,fualSlimbox,whoIsOnline,googleAdSense,flyoutCategories,jscrollerSideboxes,productGroupPricing,quickEdit,productTags,CKEditor,tinyMCE,xinha
 plugins.type.order_total = paymentSurcharge,
-plugins.type.editors = CKEditor,tinyMCE,xinha
 
 ## plugin version numbers
 plugins.catalogDefault.version = ${zenmagick.version}
@@ -51,14 +50,6 @@ plugins.whoIsOnline.version = 0.2.1
 plugins.googleAdSense.version = 0.5.1
 plugins.flyoutCategories.version = 0.1.0
 plugins.jscrollerSideboxes.version = 0.1.0
-
 plugins.CKEditor.version = 0.1.1
 plugins.tinyMCE.version = 0.1.1
 plugins.xinha.version = 0.1.1
-
-## to be converted...
-plugins.zm_snap_affiliate.version = 0.1.1
-plugins.zm_rss_boxes.version = 0.4.4
-plugins.zm_crossell.version = 0.2.4
-plugins.zm_site_switch.version = 0.2.5
-plugins.zm_dual_pricing.version = 0.1.4
