@@ -19,11 +19,6 @@
             <param name="plugin.type" value="order_total" />
         </foreach>
 
-        <!-- build editors plugins -->
-        <foreach list="${plugins.type.editors}" target="plugin-release" param="plugin.name">
-            <param name="plugin.type" value="editors" />
-        </foreach>
-
         <!-- build zip of all plugins -->
         <echo message="Building ful plugins archive ..." />
         <zip zipfile="${plugin.archive}" basedir="${build.dir}/plugins" />
