@@ -1,0 +1,16 @@
+Xinha WYSIWYG plugin
+======================
+Plugin to use Xinha - http://xinha.webfactional.com/.
+
+
+Installation
+============
+1) Unzip the plugin package into the zenmagick/plugins directory.
+2) Install plugin using the ZenMagick Plugin Manager.
+
+Once installed, Xinha should appear in the list of available editors.
+
+To make this the default editor, create the following setting (for example in
+zenmagick/local.php):
+
+  ZMSettings::set('defaultEditor', 'ZMXinhaFormWidget');
