@@ -103,7 +103,7 @@
             /*** plugins ***/
             'zenmagick.core.plugins.enabled' => true,
             'zenmagick.core.plugins.baseDir' => ZM_BASE_PATH.'plugins'.DIRECTORY_SEPARATOR,
-            'zenmagick.core.plugins.groups' => 'general,order_total,editors',
+            'zenmagick.core.plugins.groups' => 'general,order_total',
         
             /*** fs ***/
             'zenmagick.core.fs.permissions.fix' => true,
